CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(tinker-config)

install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/tinker-config
	DESTINATION bin
	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
		    GROUP_READ GROUP_EXECUTE
		    WORLD_READ WORLD_EXECUTE)
set(CPACK_GENERATOR "DEB")
set(CPACK_PACKAGE_VERSION "1.0.1")
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Tinker Board <tinkerboard@asus.com>")
set(CPACK_DEBIAN_PACKAGE_DEPENDS "dhcpcd5, xfonts-base, tightvncserver")
set(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)

include(CPack)
